--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,14 @@ config.status
 libtool
 Francis.mk
 Francis.txt
+LevelEditor.mk
+LevelEditor.txt
 Makefile
 codelite/.codelite
 codelite/.tern-port
 codelite/.tern-project
 codelite/Francis/Debug
 codelite/Francis/Release
+codelite/LevelEditor/Debug
+codelite/LevelEditor/Release
 
