--- a/codelite/LevelEditor/LevelEditor.project
+++ b/codelite/LevelEditor/LevelEditor.project
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<CodeLite_Project Name="Francis" InternalType="Console">
+<CodeLite_Project Name="LevelEditor" InternalType="Console">
   <Description/>
   <Dependencies/>
   <Settings Type="Executable">
@@ -61,7 +61,7 @@
       <Environment EnvVarSetName="&lt;Use Defaults&gt;" DbgSetName="&lt;Use Defaults&gt;">
         <![CDATA[]]>
       </Environment>
-      <Debugger IsRemote="no" RemoteHostName="" RemoteHostPort="" DebuggerPath="" IsExtended="no">
+      <Debugger IsRemote="no" RemoteHostName="" RemoteHostPort="" DebuggerPath="" IsExtended="yes">
         <DebuggerSearchPaths/>
         <PostConnectCommands/>
         <StartupCommands/>
@@ -90,9 +90,9 @@
       </Completion>
     </Configuration>
   </Settings>
-  <VirtualDirectory Name="Francis">
+  <VirtualDirectory Name="LevelEditor">
     <VirtualDirectory Name="include"/>
     <VirtualDirectory Name="src"/>
-    <File Name="../../src/Francis/main.cpp"/>
+    <File Name="../../src/LevelEditor/main.cpp"/>
   </VirtualDirectory>
 </CodeLite_Project>
