--- a/codelite/Francis/Francis.project
+++ b/codelite/Francis/Francis.project
@@ -1,19 +1,101 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <CodeLite_Project Name="Francis" InternalType="Console">
+  <Plugins>
+    <Plugin Name="CMakePlugin">
+      <![CDATA[[{
+  "name": "Debug",
+  "enabled": false,
+  "buildDirectory": "build",
+  "sourceDirectory": "$(ProjectPath)",
+  "generator": "",
+  "buildType": "",
+  "arguments": [],
+  "parentProject": ""
+ }, {
+  "name": "Release",
+  "enabled": false,
+  "buildDirectory": "build",
+  "sourceDirectory": "$(ProjectPath)",
+  "generator": "",
+  "buildType": "",
+  "arguments": [],
+  "parentProject": ""
+ }]]]>
+    </Plugin>
+    <Plugin Name="qmake">
+      <![CDATA[00020001N0005Debug0000000000000001N0007Release000000000000]]>
+    </Plugin>
+  </Plugins>
   <Description/>
   <Dependencies/>
+  <VirtualDirectory Name="Francis">
+    <VirtualDirectory Name="include"/>
+    <VirtualDirectory Name="src"/>
+    <File Name="../../src/Francis/main.cpp"/>
+  </VirtualDirectory>
+  <VirtualDirectory Name="shared">
+    <VirtualDirectory Name="include">
+      <File Name="../../src/shared/include/Directory.hpp"/>
+      <File Name="../../src/shared/include/Exception.hpp"/>
+      <File Name="../../src/shared/include/KeyValue.hpp"/>
+      <File Name="../../src/shared/include/PNG.hpp"/>
+      <File Name="../../src/shared/include/Timing.hpp"/>
+      <File Name="../../src/shared/include/Utils.hpp"/>
+      <File Name="../../src/shared/include/Zip.hpp"/>
+      <File Name="../../src/shared/include/ZipReader.hpp"/>
+      <File Name="../../src/shared/include/Subsystem.hpp"/>
+      <File Name="../../src/shared/include/SHA256.hpp"/>
+    </VirtualDirectory>
+    <VirtualDirectory Name="src">
+      <File Name="../../src/shared/src/Directory.cpp"/>
+      <File Name="../../src/shared/src/Exception.cpp"/>
+      <File Name="../../src/shared/src/KeyValue.cpp"/>
+      <File Name="../../src/shared/src/PNG.cpp"/>
+      <File Name="../../src/shared/src/Timing.cpp"/>
+      <File Name="../../src/shared/src/Utils.cpp"/>
+      <File Name="../../src/shared/src/Zip.cpp"/>
+      <File Name="../../src/shared/src/ZipReader.cpp"/>
+      <File Name="../../src/shared/src/Subsystem.cpp"/>
+      <File Name="../../src/shared/src/SHA256.cpp"/>
+    </VirtualDirectory>
+    <VirtualDirectory Name="zlib">
+      <File Name="../../src/shared/zlib/adler32.c"/>
+      <File Name="../../src/shared/zlib/crc32.c"/>
+      <File Name="../../src/shared/zlib/crc32.h"/>
+      <File Name="../../src/shared/zlib/gzguts.h"/>
+      <File Name="../../src/shared/zlib/inffast.c"/>
+      <File Name="../../src/shared/zlib/inffast.h"/>
+      <File Name="../../src/shared/zlib/inffixed.h"/>
+      <File Name="../../src/shared/zlib/inflate.c"/>
+      <File Name="../../src/shared/zlib/inflate.h"/>
+      <File Name="../../src/shared/zlib/inftrees.c"/>
+      <File Name="../../src/shared/zlib/inftrees.h"/>
+      <File Name="../../src/shared/zlib/zconf.h"/>
+      <File Name="../../src/shared/zlib/zlib.h"/>
+      <File Name="../../src/shared/zlib/zutil.c"/>
+      <File Name="../../src/shared/zlib/zutil.h"/>
+    </VirtualDirectory>
+  </VirtualDirectory>
   <Settings Type="Executable">
     <GlobalSettings>
-      <Compiler Options="" C_Options="" Assembler="">
-        <IncludePath Value="."/>
+      <Compiler Options="-pedantic;-Wall" C_Options="-pedantic;-Wall" Assembler="">
+        <IncludePath Value="../../src/Francis/include"/>
+        <IncludePath Value="../../src/shared/include"/>
+        <IncludePath Value="../../src/shared/zlib"/>
       </Compiler>
       <Linker Options="">
         <LibraryPath Value="."/>
+        <Library Value="png"/>
+        <Library Value="pthread"/>
+        <Library Value="rt"/>
+        <Library Value="SDL2"/>
+        <Library Value="SDL2_mixer"/>
+        <Library Value="GL"/>
       </Linker>
       <ResourceCompiler Options=""/>
     </GlobalSettings>
     <Configuration Name="Debug" CompilerType="GCC" DebuggerType="GNU gdb debugger" Type="Executable" BuildCmpWithGlobalSettings="append" BuildLnkWithGlobalSettings="append" BuildResWithGlobalSettings="append">
-      <Compiler Options="-g;-O0;-Wall" C_Options="-g;-O0;-Wall" Assembler="" Required="yes" PreCompiledHeader="" PCHInCommandLine="no" PCHFlags="" PCHFlagsPolicy="0">
+      <Compiler Options="-g;-O0" C_Options="-g;-O0" Assembler="" Required="yes" PreCompiledHeader="" PCHInCommandLine="no" PCHFlags="" PCHFlagsPolicy="0">
         <IncludePath Value="."/>
       </Compiler>
       <Linker Options="" Required="yes"/>
@@ -51,7 +133,7 @@
       </Completion>
     </Configuration>
     <Configuration Name="Release" CompilerType="GCC" DebuggerType="GNU gdb debugger" Type="Executable" BuildCmpWithGlobalSettings="append" BuildLnkWithGlobalSettings="append" BuildResWithGlobalSettings="append">
-      <Compiler Options="-O2;-Wall" C_Options="-O2;-Wall" Assembler="" Required="yes" PreCompiledHeader="" PCHInCommandLine="no" PCHFlags="" PCHFlagsPolicy="0">
+      <Compiler Options="-O3" C_Options="-O3" Assembler="" Required="yes" PreCompiledHeader="" PCHInCommandLine="no" PCHFlags="" PCHFlagsPolicy="0">
         <IncludePath Value="."/>
         <Preprocessor Value="NDEBUG"/>
       </Compiler>
@@ -90,31 +172,4 @@
       </Completion>
     </Configuration>
   </Settings>
-  <VirtualDirectory Name="Francis">
-    <VirtualDirectory Name="include"/>
-    <VirtualDirectory Name="src"/>
-    <File Name="../../src/Francis/main.cpp"/>
-  </VirtualDirectory>
-  <VirtualDirectory Name="shared">
-    <VirtualDirectory Name="include">
-      <File Name="../../src/shared/include/Directory.hpp"/>
-      <File Name="../../src/shared/include/Exception.hpp"/>
-      <File Name="../../src/shared/include/KeyValue.hpp"/>
-      <File Name="../../src/shared/include/PNG.hpp"/>
-      <File Name="../../src/shared/include/Timing.hpp"/>
-      <File Name="../../src/shared/include/Utils.hpp"/>
-      <File Name="../../src/shared/include/Zip.hpp"/>
-      <File Name="../../src/shared/include/ZipReader.hpp"/>
-    </VirtualDirectory>
-    <VirtualDirectory Name="src">
-      <File Name="../../src/shared/src/Directory.cpp"/>
-      <File Name="../../src/shared/src/Exception.cpp"/>
-      <File Name="../../src/shared/src/KeyValue.cpp"/>
-      <File Name="../../src/shared/src/PNG.cpp"/>
-      <File Name="../../src/shared/src/Timing.cpp"/>
-      <File Name="../../src/shared/src/Utils.cpp"/>
-      <File Name="../../src/shared/src/Zip.cpp"/>
-      <File Name="../../src/shared/src/ZipReader.cpp"/>
-    </VirtualDirectory>
-  </VirtualDirectory>
 </CodeLite_Project>
